# VertexCoverSolver

./: .flake8  .gitignore  README.md  benchmark-sheet-5-medium.sh  benchmark-sheet-5-sn.sh  config.sh  pyproject.toml  requirements.txt  run-benchmark.sh  setup.py
.github/workflows/: main.yml
solver/: branch_and_bound.py  clique_cover.pyx  hopcroft_karp.py  lower_bound.py  packing_constraints.pyx  read_stdin.py  reduction.py  sat_solver.py  utils.pyx  vc_graph.py  vectorized_func.py
src/vcsolver/: clique_cover.cpp  clique_cover.pyx  local_search.py  lower_bound.py  main.py  max_bipartite_matching.py  packing_constraints.html  packing_constraints.pyx  read_stdin.py  reduction.py  simple_lp_rule.py  utils.html  utils.pyx  vc_graph.py  vc_solver.py  verifier.py
tests/: __init__.py  test_graph.py  test_read_stdin.py  test_unconfined_rule.py
tests/data/: kernel.dimacs
