[project]
name = "vcsolver"
version = "0.1.0"
description = "A Vertex Cover Solver Branch and Reduce"
[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[build-system]
requires = ["setuptools ~= 68.0.0", "numpy~=1.23.5", "Cython~=0.29.34"]


